# RustCLI

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  SETUP.md  rustfmt.toml
.github/workflows/: ci.yml
crates/cat/: Cargo.toml  README.md
crates/cat/src/: main.rs
crates/cat/tests/: integration_tests.rs
crates/cli-shell/: Cargo.toml  README.md
crates/cli-shell/src/: commands.rs  main.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: color.rs  error.rs  io.rs  lib.rs  testing.rs
crates/echo/: Cargo.toml  README.md
crates/echo/src/: main.rs
crates/echo/tests/: integration_tests.rs
crates/ls/: Cargo.toml  README.md
crates/ls/src/: main.rs
crates/ls/tests/: integration_tests.rs
crates/mkdir/: Cargo.toml
crates/mkdir/src/: main.rs
crates/mv/: Cargo.toml
crates/mv/src/: main.rs
crates/pwd/: Cargo.toml
crates/pwd/src/: main.rs
crates/pwd/tests/: integration_tests.rs
crates/rm/: Cargo.toml
crates/rm/src/: main.rs
crates/rmdir/: Cargo.toml
crates/rmdir/src/: main.rs
crates/touch/: Cargo.toml
crates/touch/src/: main.rs
