[package]
name = "cat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cat"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
common.workspace = true

[features]
default = []
color = ["common/color"]

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

