[package]
name = "cli-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cli-shell"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
common.workspace = true
dirs = "5.0"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

