[package]
name = "rmdir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rmdir"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
common.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

